--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -6,6 +6,8 @@
       width="700"
       height="480"
       frameborder="0"
+      autoplay="true"
       allowfullscreen="">
+   
   </iframe>
 </div>
