--- a/_includes/my-gallery.html
+++ b/_includes/my-gallery.html
@@ -1,13 +1,14 @@
-<!-- Feel free to change the width and height to your desired video size. -->
-
-<div class="embed-container">
-  <iframe
-      src="https://www.youtube.com/embed/{{ include.id }}"
-      width="700"
-      height="480"
-      frameborder="0"
-      autoplay="true"
-      allowfullscreen="">
-   
-  </iframe>
-</div>
+<div class ="image-gallery">
+  {% assign sorted = site.static_files | sort: 'date' | reverse %}
+  {% for file in sorted %}
+  {% if file.path contains include.folder %}
+  {% if file.extname == '.png' %}
+    {% assign filenameparts = file.path | split: "/" %}
+      {% assign filename = filenameparts | last | replace: file.extname,"" %}
+       <div class="box"><a href="{{ file.path | relative_url }}" title="{{ filename }}">
+         <img src="{{ site.thumbsurl }}{{file.name }} " alt="{{ filename }}"  class="img-gallery" />
+       </a></div>
+      {% endif %}
+    {% endif %}
+  {% endfor %}
+ </div>
